--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^1.6.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.0.1",
+        "recharts": "^2.12.3",
         "styled-components": "^6.1.8",
         "swiper": "^11.0.7"
     },
