--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
         "@types/react-dom": "^18.2.21",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
-        "eslint-plugin-react": "^7.34.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "vite": "^5.1.6"
