--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
-    "trailingComma": "es5",
+    "trailingComma": "all",
     "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+    "semi": true,
+    "singleQuote": true,
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "endOfLine": "lf"
 }
