--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
+        "react-router": "^6.22.3",
         "recharts": "^2.12.3",
         "styled-components": "^6.1.8",
         "swiper": "^11.0.7"
@@ -21,15 +22,20 @@
     "devDependencies": {
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
+        "@typescript-eslint/eslint-plugin": "^7.3.1",
+        "@typescript-eslint/parser": "^7.3.1",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard": "^17.1.0",
-        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "prettier": "^3.2.5",
         "vite": "^5.1.6"
     }
 }
