--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "axios": "^1.6.8",
+        "js-cookie": "^3.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-flash-message": "^1.0.8",
         "react-icons": "^5.0.1",
         "react-router": "^6.22.3",
+        "react-router-dom": "^6.22.3",
         "recharts": "^2.12.3",
         "styled-components": "^6.1.8",
         "swiper": "^11.0.7"
