--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "axios": "^1.6.8",
+        "dayjs": "^1.11.10",
+        "iso-639-1": "^3.1.2",
         "js-cookie": "^3.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
