--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@wojtekmaj/react-daterange-picker": "^5.5.0",
         "axios": "^1.6.8",
+        "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
         "iso-639-1": "^3.1.2",
         "js-cookie": "^3.0.5",
         "react": "^18.2.0",
+        "react-date-range": "2.0.0-alpha.4",
+        "react-datetime-picker": "^5.6.0",
         "react-dom": "^18.2.0",
         "react-flash-message": "^1.0.8",
         "react-icons": "^5.0.1",
+        "react-paginate": "^8.2.0",
         "react-router": "^6.22.3",
         "react-router-dom": "^6.22.3",
         "recharts": "^2.12.3",
