--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@uiw/react-heat-map": "^2.2.2",
+        "@uiw/react-tooltip": "^4.22.3",
         "@wojtekmaj/react-daterange-picker": "^5.5.0",
         "axios": "^1.6.8",
         "date-fns": "^3.6.0",
