--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@uiw/react-tooltip": "^4.22.3",
         "@wojtekmaj/react-daterange-picker": "^5.5.0",
         "axios": "^1.6.8",
+        "axios-cache-interceptor": "^1.5.1",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
         "iso-639-1": "^3.1.2",
