--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "iso-639-1": "^3.1.2",
         "js-cookie": "^3.0.5",
         "react": "^18.2.0",
+        "react-circular-progressbar": "^2.1.0",
         "react-date-range": "2.0.0-alpha.4",
         "react-datetime-picker": "^5.6.0",
         "react-dom": "^18.2.0",
