--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "js-cookie": "^3.0.5",
         "react": "^18.2.0",
         "react-circular-progressbar": "^2.1.0",
+        "react-confetti": "^6.1.0",
         "react-date-range": "2.0.0-alpha.4",
         "react-datetime-picker": "^5.6.0",
         "react-dom": "^18.2.0",
@@ -32,6 +33,7 @@
         "react-paginate": "^8.2.0",
         "react-router": "^6.22.3",
         "react-router-dom": "^6.22.3",
+        "react-use": "^17.5.0",
         "recharts": "^2.12.3",
         "styled-components": "^6.1.8",
         "swiper": "^11.0.7"
