--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.5.1",
-        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@uiw/react-heat-map": "^2.2.2",
         "@uiw/react-tooltip": "^4.22.3",
         "@wojtekmaj/react-daterange-picker": "^5.5.0",
         "axios": "^1.6.8",
-        "axios-cache-interceptor": "^1.5.1",
+        "axios-cache-interceptor": "^1.5.2",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
         "iso-639-1": "^3.1.2",
@@ -29,32 +29,32 @@
         "react-datetime-picker": "^5.6.0",
         "react-dom": "^18.2.0",
         "react-flash-message": "^1.0.8",
-        "react-icons": "^5.0.1",
+        "react-icons": "^5.1.0",
         "react-paginate": "^8.2.0",
-        "react-router": "^6.22.3",
-        "react-router-dom": "^6.22.3",
+        "react-router": "^6.23.0",
+        "react-router-dom": "^6.23.0",
         "react-use": "^17.5.0",
-        "recharts": "^2.12.3",
+        "recharts": "^2.12.6",
         "styled-components": "^6.1.8",
-        "swiper": "^11.0.7"
+        "swiper": "^11.1.1"
     },
     "devDependencies": {
-        "@types/react": "^18.2.64",
-        "@types/react-dom": "^18.2.21",
-        "@typescript-eslint/eslint-plugin": "^7.3.1",
-        "@typescript-eslint/parser": "^7.3.1",
+        "@types/react": "^18.2.79",
+        "@types/react-dom": "^18.2.25",
+        "@typescript-eslint/eslint-plugin": "^7.7.1",
+        "@typescript-eslint/parser": "^7.7.1",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard": "^17.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsx-a11y": "^6.8.0",
-        "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
+        "eslint-plugin-react-refresh": "^0.4.6",
         "prettier": "^3.2.5",
-        "vite": "^5.1.6"
+        "vite": "^5.2.10"
     }
 }
