--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-dom": "^18.2.0",
         "react-flash-message": "^1.0.8",
         "react-icons": "^5.1.0",
+        "react-lite-month-picker": "^1.2.18",
         "react-paginate": "^8.2.0",
         "react-router": "^6.23.0",
         "react-router-dom": "^6.23.0",
