--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-paginate": "^8.2.0",
         "react-router": "^6.23.0",
         "react-router-dom": "^6.23.0",
+        "react-spinners": "^0.13.8",
         "react-use": "^17.5.0",
         "recharts": "^2.12.6",
         "styled-components": "^6.1.8",
