--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "react-use": "^17.5.0",
         "recharts": "^2.12.6",
         "styled-components": "^6.1.8",
-        "swiper": "^11.1.1"
+        "swiper": "^11.1.1",
+        "youtube-transcript": "^1.2.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.79",
