--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard": "^17.1.0",
@@ -58,7 +59,9 @@
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
+        "postcss": "^8.4.41",
         "prettier": "^3.2.5",
+        "tailwindcss": "^3.4.9",
         "vite": "^5.2.10"
     }
 }
