--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@stripe/stripe-js": "^5.2.0",
         "@uiw/react-heat-map": "^2.2.2",
         "@uiw/react-tooltip": "^4.22.3",
         "@wojtekmaj/react-daterange-picker": "^5.5.0",
@@ -21,8 +22,10 @@
         "cal-heatmap": "^4.2.4",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
+        "framer-motion": "^11.12.0",
         "iso-639-1": "^3.1.2",
         "js-cookie": "^3.0.5",
+        "lucide-react": "^0.462.0",
         "react": "^18.2.0",
         "react-circular-progressbar": "^2.1.0",
         "react-confetti": "^6.1.0",
@@ -40,7 +43,12 @@
         "recharts": "^2.12.6",
         "styled-components": "^6.1.8",
         "swiper": "^11.1.1",
-        "youtube-transcript": "^1.2.1"
+        "youtube-transcript": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^1.2.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.79",
